# apertium-mlt-heb

./: .gitattributes  .gitignore  Makefile  Makefile.am  README  apertium-mlt-heb.mlt-heb.dix  apertium-mt-he.he.dix  apertium-mt-he.mt-he.dix  apertium-mt-he.mt-he.t1x  apertium-mt-he.mt.acx  apertium-mt-he.mt.dix  apertium-mt-he.mt.tsx  configure.ac  modes.xml  pending-tests.sh  recompile.sh  regression-tests.sh  wiki-tests.sh
dev/: adj_suspected.txt  attach_gloss.py  bidix-verbs-to-he.dix.sh  bilingual-summary.txt  concordancer.py  coverage.sh  find-nouns.sh  find-specific-noun.sh  freq_cat.txt  gen_stems.py  generation-summary.mt-he.txt  generation-test.py  he.dix  hspell-to-dix.sh  inconsistency-summary.sh  missing-bidix-freq.sh  mt-he.inconsistency.sh  mt-he.interwiki.xml  mt.verbs.py  paragraph1.missing.txt  paragraph1.out  paragraph1.txt  paragraph1.words.txt  process-found-nouns.py  process-nouns-with-paradigms.py  strong_verb.py  testvoc-summary.mt-he.txt  testvoc.sh  verb.py
dev/bidix/: pending_adjectives.txt  pending_adverbs.txt  pending_conjunctions.txt  pending_determiners.txt  pending_nouns.txt  pending_numerals.txt  pending_prepositions.txt  pending_pronouns.txt  pending_proper_nouns.txt  pending_verbs.txt
dev/freq_cat/: freq_cat.txt  mark_analysed.py  notes.txt
dev/mt_brokenplurals/: nouns.py
dev/mt_he_verbs/: bidix.py
dev/mt_verbs/: stems.csv  verbs.py
dev/mt_verbs/classes/: __init__.py  common.py  defective.py  defective_a_a.py  defective_p3_only.py  eighth_form_ie.py  irregular_gie.py  kisser.py  (+22 more)
dev/wiktionary/: extract_wiki_inflections.py
